2021/11/02 午後独習と演習１